--- a/gallery.html
+++ b/gallery.html
@@ -13,6 +13,9 @@
     <header>
         <nav class="navbar">
             <div class="logo">
+                <a href="index.html">
+                    <img src="logo.jpeg" alt="Deccan Multi State Housing Cooperative Society Ltd. Logo">
+                </a>
                 <h1>Deccan Monogram</h1>
             </div>
             <ul class="nav-links">
