Force push updated project with latest changes

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Deccan Monogram</title>
+    <title>About - Deccan Multi State Housing Cooperative Society Ltd</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -12,9 +12,9 @@
         <nav class="navbar">
             <div class="logo">
                 <a href="index.html">
-                    <img src="logo.jpeg" alt="Deccan Multi State Housing Cooperative Society Ltd. Logo">
+                    <img src="./images/home/logo.jpeg" alt="Deccan Multi State Housing Cooperative Society Ltd. Logo">
                 </a>
-                <h1>Deccan Monogram</h1>
+                <h1>Deccan Multi State Housing Cooperative Society Ltd</h1>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html" >Home</a></li>
@@ -32,10 +32,11 @@
         </nav>
     </header>
 
-    <main>
-        <section class="page-header">
-            <div class="container">
+    <main class="about-page">
+        <section class="hero" style="background-image: url('./images/about/director-about.jpeg');">
+            <div class="hero-content">
                 <h1>About Us</h1>
+                <p>Building Trust Through Transparency</p>
             </div>
         </section>
 
@@ -135,7 +136,7 @@
         <section class="conclusion">
             <div class="container">
                 <h2>Conclusion</h2>
-                <p>Deccan Monogram continues to strive for excellence in providing quality housing solutions while maintaining the highest standards of transparency and member satisfaction. Our commitment to community development and sustainable growth remains unwavering.</p>
+                <p>Deccan Multi State Housing Cooperative Society Ltd continues to strive for excellence in providing quality housing solutions while maintaining the highest standards of transparency and member satisfaction. Our commitment to community development and sustainable growth remains unwavering.</p>
             </div>
         </section>
     </main>
