--- a/channel-partner.html
+++ b/channel-partner.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Channel Partner - Deccan Monogram</title>
+    <title>Channel Partner - Deccan Multi State Housing Cooperative Society Ltd</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -12,9 +12,9 @@
         <nav class="navbar">
             <div class="logo">
                 <a href="index.html">
-                    <img src="logo.jpeg" alt="Deccan Multi State Housing Cooperative Society Ltd. Logo">
+                    <img src="./images/home/logo.jpeg" alt="Deccan Multi State Housing Cooperative Society Ltd. Logo">
                 </a>
-                <h1>Deccan Monogram</h1>
+                <h1>Deccan Multi State Housing Cooperative Society Ltd</h1>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
@@ -32,10 +32,11 @@
         </nav>
     </header>
 
-    <main>
-        <section class="page-header">
-            <div class="container">
+    <main class="channel-partner-page">
+        <section class="hero" style="background-image: url('./images/partner/opp-partner.jpeg');">
+            <div class="hero-content">
                 <h1>Join as a Channel Partner</h1>
+                <p>Be Part of Our Growing Success Story</p>
             </div>
         </section>
 
@@ -43,7 +44,7 @@
             <div class="container">
                 <h2>Golden Opportunity to Reach New Heights</h2>
                 <div class="opportunity-content">
-                    <p>Join hands with Deccan Monogram and be part of our growing success story. As a channel partner, you'll have access to exclusive opportunities and resources to grow your business while helping others find their dream homes.</p>
+                    <p>Join hands with Deccan Multi State Housing Cooperative Society Ltd and be part of our growing success story. As a channel partner, you'll have access to exclusive opportunities and resources to grow your business while helping others find their dream homes.</p>
                     <div class="opportunity-highlights">
                         <div class="highlight-card">
                             <i class="fas fa-chart-line"></i>
