--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery - Deccan Monogram</title>
+    <title>Gallery - Deccan Multi State Housing Cooperative Society Ltd</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- Lightbox CSS -->
@@ -14,9 +14,9 @@
         <nav class="navbar">
             <div class="logo">
                 <a href="index.html">
-                    <img src="logo.jpeg" alt="Deccan Multi State Housing Cooperative Society Ltd. Logo">
+                    <img src="./images/home/logo.jpeg" alt="Deccan Multi State Housing Cooperative Society Ltd. Logo">
                 </a>
-                <h1>Deccan Monogram</h1>
+                <h1>Deccan Multi State Housing Cooperative Society Ltd</h1>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
@@ -34,10 +34,11 @@
         </nav>
     </header>
 
-    <main>
-        <section class="page-header">
-            <div class="container">
+    <main class="gallery-page">
+        <section class="hero" style="background-image: url('./images/gallery/grid-gallery.jpeg');">
+            <div class="hero-content">
                 <h1>Gallery</h1>
+                <p>Showcasing Our Projects and Events</p>
             </div>
         </section>
 
@@ -58,16 +59,16 @@
                 <div class="image-grid">
                     <!-- Residential Properties -->
                     <div class="gallery-item residential">
-                        <a href="images/residential-1.jpg" data-lightbox="gallery" data-title="Residential Property 1">
-                            <img src="images/residential-1.jpg" alt="Residential Property 1">
+                        <a href="./images/gallery/residential-1.jpeg" data-lightbox="gallery" data-title="Residential Property 1">
+                            <img src="./images/gallery/residential-1.jpeg" alt="Residential Property 1">
                             <div class="overlay">
                                 <span>Residential Property</span>
                             </div>
                         </a>
                     </div>
                     <div class="gallery-item residential">
-                        <a href="images/residential-2.jpg" data-lightbox="gallery" data-title="Residential Property 2">
-                            <img src="images/residential-2.jpg" alt="Residential Property 2">
+                        <a href="./images/gallery/residential-2.jpeg" data-lightbox="gallery" data-title="Residential Property 2">
+                            <img src="./images/gallery/residential-2.jpeg" alt="Residential Property 2">
                             <div class="overlay">
                                 <span>Residential Property</span>
                             </div>
@@ -76,16 +77,16 @@
 
                     <!-- Commercial Properties -->
                     <div class="gallery-item commercial">
-                        <a href="images/commercial-1.jpg" data-lightbox="gallery" data-title="Commercial Property 1">
-                            <img src="images/commercial-1.jpg" alt="Commercial Property 1">
+                        <a href="./images/gallery/commercial-1.jpeg" data-lightbox="gallery" data-title="Commercial Property 1">
+                            <img src="./images/gallery/commercial-1.jpeg" alt="Commercial Property 1">
                             <div class="overlay">
                                 <span>Commercial Property</span>
                             </div>
                         </a>
                     </div>
                     <div class="gallery-item commercial">
-                        <a href="images/commercial-2.jpg" data-lightbox="gallery" data-title="Commercial Property 2">
-                            <img src="images/commercial-2.jpg" alt="Commercial Property 2">
+                        <a href="./images/gallery/commercial-2.jpeg" data-lightbox="gallery" data-title="Commercial Property 2">
+                            <img src="./images/gallery/commercial-2.jpeg" alt="Commercial Property 2">
                             <div class="overlay">
                                 <span>Commercial Property</span>
                             </div>
@@ -94,16 +95,16 @@
 
                     <!-- Amenities -->
                     <div class="gallery-item amenities">
-                        <a href="images/amenity-1.jpg" data-lightbox="gallery" data-title="Amenity 1">
-                            <img src="images/amenity-1.jpg" alt="Amenity 1">
+                        <a href="./images/gallery/amenity-1.jpeg" data-lightbox="gallery" data-title="Amenity 1">
+                            <img src="./images/gallery/amenity-1.jpeg" alt="Amenity 1">
                             <div class="overlay">
                                 <span>Amenity</span>
                             </div>
                         </a>
                     </div>
                     <div class="gallery-item amenities">
-                        <a href="images/amenity-2.jpg" data-lightbox="gallery" data-title="Amenity 2">
-                            <img src="images/amenity-2.jpg" alt="Amenity 2">
+                        <a href="./images/gallery/amenity-2.jpeg" data-lightbox="gallery" data-title="Amenity 2">
+                            <img src="./images/gallery/amenity-2.jpeg" alt="Amenity 2">
                             <div class="overlay">
                                 <span>Amenity</span>
                             </div>
@@ -112,16 +113,16 @@
 
                     <!-- Events -->
                     <div class="gallery-item events">
-                        <a href="images/event-1.jpg" data-lightbox="gallery" data-title="Event 1">
-                            <img src="images/event-1.jpg" alt="Event 1">
+                        <a href="./images/gallery/event-1.jpeg" data-lightbox="gallery" data-title="Event 1">
+                            <img src="./images/gallery/event-1.jpeg" alt="Event 1">
                             <div class="overlay">
                                 <span>Event</span>
                             </div>
                         </a>
                     </div>
                     <div class="gallery-item events">
-                        <a href="images/event-2.jpg" data-lightbox="gallery" data-title="Event 2">
-                            <img src="images/event-2.jpg" alt="Event 2">
+                        <a href="./images/gallery/event-2.jpeg" data-lightbox="gallery" data-title="Event 2">
+                            <img src="./images/gallery/event-2.jpeg" alt="Event 2">
                             <div class="overlay">
                                 <span>Event</span>
                             </div>
