--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <nav class="navbar">
             <div class="logo">
                 <a href="index.html">
-                    <img src="logo.jpeg" alt="Deccan Multi State Housing Cooperative Society Ltd. Logo">
+                    <img src="./images/home/logo.jpeg" alt="Deccan Multi State Housing Cooperative Society Ltd. Logo">
                 </a>
-                <h1>Deccan Monogram</h1>
+                <h1>Deccan Multi State Housing Cooperative Society Ltd</h1>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html" class="active">Home</a></li>
@@ -33,9 +33,9 @@
     </header>
 
     <main>
-        <section class="hero">
+        <section class="hero" style="background-image: url('images/home/land.jpeg');">
             <div class="hero-content">
-                <h1>Welcome to Deccan Monogram</h1>
+                <h1>Welcome to Deccan Multi State Housing Cooperative Society Ltd</h1>
                 <p>Building Communities, Creating Homes</p>
             </div>
         </section>
@@ -43,7 +43,7 @@
         <section class="introduction">
             <div class="container">
                 <h2>Introduction</h2>
-                <p>Deccan Monogram is a Multi State Housing Cooperative Society dedicated to providing quality housing solutions to our members. We believe in creating sustainable communities that enhance the quality of life for all residents.</p>
+                <p>Deccan Multi State Housing Cooperative Society Ltd is a Multi State Housing Cooperative Society dedicated to providing quality housing solutions to our members. We believe in creating sustainable communities that enhance the quality of life for all residents.</p>
                 <p>With years of experience in the housing sector, we have established ourselves as a trusted name in community development and cooperative housing.</p>
             </div>
         </section>
@@ -52,7 +52,7 @@
             <div class="container">
                 <h2>History of the Society</h2>
                 <div class="history-content">
-                    <p>Founded with a vision to revolutionize cooperative housing, Deccan Monogram has grown from humble beginnings to become a trusted name in community development. Our journey is marked by:</p>
+                    <p>Founded with a vision to revolutionize cooperative housing, Deccan Multi State Housing Cooperative Society Ltd has grown from humble beginnings to become a trusted name in community development. Our journey is marked by:</p>
                     <ul>
                         <li>Years of dedicated service in the housing sector</li>
                         <li>Successful completion of multiple housing projects</li>
